feat: 이미지 다운 배치 api 구현
