# backend/src/docs/swagger.yaml
@@ -526,6 +526,38 @@ paths:
       summary: Get Learning History
       tags:
       - parking
+  /v0.1/parking/{projectId}/images/batch:
+    post:
+      consumes:
+      - application/json
+      description: 배치로 이미지 저장하기
+      parameters:
+      - description: Project ID
+        in: path
+        name: projectId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: 배치로 이미지 저장하기
+      tags:
+      - parking
   /v0.1/parking/{projectId}/images/roi-folders:
     get:
       consumes:
